<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.SettingsActivity"
        android:orientation="vertical"
        android:padding="@dimen/profile_padding">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/profile_height_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"/>
        <EditText
                android:id="@+id/profile_height"
                android:layout_width="@dimen/profile_edit_text_width"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_alignBaseline="@id/profile_height_text"
                android:inputType="number"
                tools:ignore="Autofill,LabelFor"
                android:gravity="center_horizontal"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/profile_weight_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"/>
        <EditText
                android:id="@+id/profile_weight"
                android:layout_width="@dimen/profile_edit_text_width"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_alignBaseline="@id/profile_weight_text"
                tools:ignore="Autofill,LabelFor"
                android:gravity="center_horizontal"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/profile_vibration_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vibration_interval"/>
        <EditText
                android:id="@+id/profile_vibration"
                android:layout_alignParentEnd="true"
                android:layout_width="@dimen/profile_edit_text_width"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:gravity="center_horizontal"
                android:layout_alignBaseline="@id/profile_vibration_text"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/profile_gender_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"/>
        <Spinner
                android:id="@+id/profile_gender"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/profile_gender_text"
                android:entries="@array/genders_array"/>
    </RelativeLayout>
    <Button
            android:id="@+id/profile_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_save"
            android:layout_gravity="center_horizontal"/>
</LinearLayout>