<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".fragments.TrackTrainingFragment">

    <Chronometer
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/chrono_text_size"/>
    <LinearLayout
            android:id="@+id/metrics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/time"
            android:gravity="center_horizontal"
            android:layout_marginBottom="@dimen/metrics_margin_bottom"
            android:divider="@drawable/metrics_divider"
            android:showDividers="middle">
        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/metrics_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero_dot"
                    android:textSize="@dimen/metrics_text_size"
                    android:textColor="@android:color/black"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/metrics_distance"
                    android:text="@string/front_distance"
                    android:layout_centerHorizontal="true"/>
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/metrics_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero_colon"
                    android:textSize="@dimen/metrics_text_size"
                    android:textColor="@android:color/black"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/metrics_rate"
                    android:text="@string/front_pace"
                    android:layout_centerHorizontal="true"/>
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/metrics_calories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textSize="@dimen/metrics_text_size"
                    android:textColor="@android:color/black"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/metrics_calories"
                    android:text="@string/front_calories"
                    android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </LinearLayout>
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/metrics">
        <com.google.android.gms.maps.MapView
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        <FrameLayout
                android:id="@+id/fabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/fab_padding"
                android:clipToPadding="false"
                android:layout_gravity="bottom">

            <android.support.design.widget.FloatingActionButton
                    android:id="@+id/go_fab_idle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fabCustomSize="@dimen/fab_size"
                    app:backgroundTint="@color/fab_color_go"
                    android:paddingBottom="@dimen/fab_padding"
                    android:layout_marginBottom="@dimen/fab_padding"
                    android:src="@drawable/ic_play_arrow"
                    android:scaleType="center"
                    android:layout_gravity="center_horizontal"/>
            <android.support.design.widget.FloatingActionButton
                    android:id="@+id/pause_fab_running"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fabCustomSize="@dimen/fab_size"
                    app:backgroundTint="@color/fab_color_pause"
                    android:paddingBottom="@dimen/fab_padding"
                    android:layout_marginBottom="@dimen/fab_padding"
                    android:src="@drawable/ic_pause"
                    android:scaleType="center"
                    android:layout_gravity="center_horizontal"
                    android:visibility="gone"/>
            <LinearLayout
                    android:id="@+id/fabs_paused"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:clipToPadding="false"
                    android:visibility="gone"
                    android:paddingBottom="@dimen/fab_padding">
                <android.support.design.widget.FloatingActionButton
                        android:id="@+id/go_fab_paused"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:fabCustomSize="@dimen/fab_size"
                        app:backgroundTint="@color/fab_color_go"
                        android:src="@drawable/ic_play_arrow"
                        android:scaleType="center"/>

                <Space android:layout_width="@dimen/fabs_spacing" android:layout_height="0dp"/>

                <android.support.design.widget.FloatingActionButton
                        android:id="@+id/stop_fab_paused"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:fabCustomSize="@dimen/fab_size"
                        app:backgroundTint="@color/fab_color_stop"
                        android:src="@drawable/ic_stop"
                        android:scaleType="center"/>
            </LinearLayout>
        </FrameLayout>
    </FrameLayout>
</RelativeLayout>